# azusa-stock

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  SECURITY.md  data.json  docker-compose.override.yml  docker-compose.yml  wave.md
backend/: .dockerignore  .env.example  Dockerfile  coverage.json  docker-entrypoint.sh  logging_config.py  main.py  pyproject.toml  requirements.in  requirements.txt
backend/api/: dependencies.py  forex_routes.py  fx_watch_routes.py  guru_routes.py  holding_routes.py  persona_routes.py  preferences_routes.py  rate_limit.py  scan_routes.py  schemas.py  snapshot_routes.py  stock_routes.py  telegram_routes.py  thesis_routes.py
backend/api/routes/: __init__.py  backtest_routes.py  crypto_routes.py  forex_routes.py  fx_watch_routes.py  guru_routes.py  holding_routes.py  networth_routes.py  persona_routes.py  preferences_routes.py  scan_routes.py  snapshot_routes.py  stock_routes.py  telegram_routes.py  thesis_routes.py
backend/api/schemas/: __init__.py  backtest.py  common.py  crypto.py  fx_watch.py  guru.py  guru_analytics.py  networth.py  notification.py  portfolio.py  scan.py  stock.py
backend/application/: filing_service.py  formatters.py  fx_watch_service.py  holding_service.py  notification_service.py  persona_service.py  preferences_service.py  prewarm_service.py  rebalance_service.py  resonance_service.py  scan_service.py  services.py  snapshot_service.py  stock_service.py  stress_test_service.py  webhook_service.py
backend/application/guru/: __init__.py  backtest_service.py  guru_service.py  heatmap_service.py  resonance_service.py
backend/application/messaging/: __init__.py  notification_service.py  telegram_settings_service.py  webhook_service.py
backend/application/portfolio/: __init__.py  crypto_service.py  fx_watch_service.py  holding_service.py  net_worth_service.py  rebalance_service.py  snapshot_service.py  stress_test_service.py
backend/application/scan/: __init__.py  backfill_service.py  backtest_service.py  prewarm_service.py  scan_service.py
backend/application/settings/: __init__.py  persona_service.py  preferences_service.py
backend/application/stock/: __init__.py  filing_service.py  stock_service.py
backend/config/: settings.py
backend/domain/: analysis.py  constants.py  entities.py  enums.py  formatters.py  fx_analysis.py  protocols.py  rebalance.py  smart_money.py  stress_test.py  withdrawal.py
backend/domain/analysis/: __init__.py  analysis.py  backtest.py  fx_analysis.py  guru_backtest.py  smart_money.py
backend/domain/core/: __init__.py  constants.py  entities.py  enums.py  formatters.py  protocols.py
backend/domain/portfolio/: __init__.py  rebalance.py  withdrawal.py
backend/i18n/: __init__.py
backend/i18n/locales/: en.json  ja.json  zh-CN.json  zh-TW.json
backend/infrastructure/: crypto.py  database.py  finmind_adapter.py  jquants_adapter.py  market_data.py  market_data_resolver.py  notification.py  repositories.py  sec_edgar.py
backend/infrastructure/market_data/: __init__.py  crypto_adapter.py  finmind_adapter.py  jquants_adapter.py  market_data.py  market_data_resolver.py
backend/infrastructure/persistence/: __init__.py  repositories.py
backend/scripts/: add_locale_keys.py
backend/tests/: conftest.py  test_architecture.py  test_auth.py  test_crypto.py  test_error_sanitization.py  test_import_validation.py  test_rate_limiting.py
backend/tests/api/: test_backtest_routes.py  test_cache_clear.py  test_crypto_routes.py  test_fear_greed.py  test_forex_routes.py  test_fx_watch_routes.py  test_guru_routes.py  test_health.py  test_holding_routes.py  test_networth_routes.py  test_persona_routes.py  test_preferences_routes.py  test_scan_routes.py  test_snapshot_routes.py  test_stock_routes.py  test_stress_test_routes.py  test_thesis_routes.py  test_webhook.py  test_withdraw.py
backend/tests/application/: test_backfill_service.py  test_backtest_service.py  test_crypto_service.py  test_currency_exposure.py  test_etf_sector_lookthrough.py  test_filing_service.py  test_fx_watch_service.py  test_guru_analytics_service.py  test_holding_service.py  test_net_worth_service.py  test_persona_service.py  test_preferences_service.py  test_prewarm_service.py  test_rebalance_change.py  test_resonance_service.py  test_scan_etf_exclusion.py  test_scan_service.py  test_send_fx_alerts.py  test_snapshot_service.py  test_stock_service.py  test_stress_test_service.py  test_telegram_settings_service.py  test_weekly_digest.py  test_xray_etf_breakdown.py
backend/tests/domain/: test_analysis.py  test_backtest_analysis.py  test_fear_greed_analysis.py  test_formatters.py  test_fx_analysis.py  (+8 more)
(+370 files in other folders)
